improved swagger, added schedule handler
