# internal/app/api/model/studentsLesson.go
@@ -1,12 +1,12 @@
 package model
 
 type StudentsLesson struct {
-	GroupId      int
-	DayNum       int
-	WeekType     string
-	LessonType   string
-	LessonName   string
-	Teacher      string
-	LessonPlace  string
-	SubgroupName string
+	GroupId      int `json:"id"`
+	DayNum       int `json:"dayNum"`
+	WeekType     string `json:"weekType"`
+	LessonType   string `json:"lessonType"`
+	LessonName   string `json:"lessonName"`
+	Teacher      string `json:"teacher"`
+	LessonPlace  string `json:"lessonPlace"`
+	SubgroupName string `json:"subgroupName"`
 }
