# internal/app/api/model/teachersSchedule.go
@@ -1,12 +1,12 @@
 package model
 
 type TeachersSchedule struct {
-	Id           int
-	DayNum       string
-	WeekType     string
-	LessonType   string
-	LessonName   string
-	GroupNum     string
-	LessonPlace  string
-	SubgroupName string
+	Id           int `json:"id"`
+	DayNum       string `json:"dayNum"`
+	WeekType     string `json:"weekType"`
+	LessonType   string `json:"lessonType"`
+	LessonName   string `json:"lessonName"`
+	GroupNum     string `json:"groupNum"`
+	LessonPlace  string `json:"lessonPlace"`
+	SubgroupName string `json:"subgroupName"`
 }
